[package]
name = "prove_moon_landing"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
smallvec = { version = "1.13.1", default-features = false }

log = "0.4.0"